--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "supertest": "^1.2.0",
     "we-core": "wejs/we-core",
     "we-plugin-acl": "wejs/we-plugin-acl",
+    "we-plugin-file": "wejs/we-plugin-file",
     "we-plugin-user": "wejs/we-plugin-user",
     "we-test-tools": "wejs/we-test-tools"
   },
