update get multer logic

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
       "we-plugin-file": true,
       "we-plugin-acl": true,
       "we-plugin-user": true
-    }
+    },
+    "devPlugins": {}
   }
 }
