--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
     "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js"
   },
   "dependencies": {
-    "gm": "^1.23.0",
+    "gm": "^1.23.1",
     "mkdirp": "^0.5.1",
-    "uuid": "^3.1.0"
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "express-mysql-session": "^1.2.2",
-    "fs-extra": "^4.0.1",
-    "mocha": "^3.5.0",
-    "mysql": "^2.14.1",
-    "rimraf": "^2.6.1",
+    "express-mysql-session": "^1.2.3",
+    "fs-extra": "^5.0.0",
+    "mocha": "^5.0.1",
+    "mysql2": "^1.5.2",
+    "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
-    "we-core": "wejs/we-core",
+    "we-core": "^2",
     "we-plugin-acl": "wejs/we-plugin-acl",
     "we-plugin-file": "wejs/we-plugin-file",
-    "we-plugin-user": "wejs/we-plugin-user",
+    "we-plugin-user": "^2",
     "we-test-tools": "wejs/we-test-tools"
   },
   "keywords": [
