--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
   "dependencies": {
     "gm": "^1.23.1",
     "mkdirp": "^0.5.1",
-    "uuid": "^3.2.1"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "express-mysql-session": "^1.2.3",
-    "fs-extra": "^5.0.0",
-    "mocha": "^5.0.1",
-    "mysql2": "^1.5.2",
-    "rimraf": "^2.6.2",
-    "supertest": "^3.0.0",
-    "we-core": "^2",
-    "we-plugin-acl": "wejs/we-plugin-acl",
-    "we-plugin-file": "wejs/we-plugin-file",
+    "connect-sqlite3": "^0.9.11",
+    "fs-extra": "^7.0.1",
+    "mocha": "^6.0.2",
+    "mysql2": "^1.6.5",
+    "rimraf": "^2.6.3",
+    "supertest": "^4.0.2",
+    "we-core": "^2.1.1",
+    "we-plugin-acl": "^1.2.13",
+    "we-plugin-auth": "^2.3.1",
+    "we-plugin-file": "^2.0.5",
     "we-plugin-user": "^2",
-    "we-test-tools": "wejs/we-test-tools"
+    "we-test-tools": "wejs/we-test-tools#0.3.21"
   },
   "keywords": [
     "wejs-plugin",
@@ -45,8 +46,9 @@
       "we-plugin-file": true
     },
     "plugins": {
-      "we-plugin-file": true,
       "we-plugin-acl": true,
+      "we-plugin-auth": true,
+      "we-plugin-file": true,
       "we-plugin-user": true
     },
     "devPlugins": {}
